styles.css
body {
    padding: 0;
    margin: 0;
    text-align: center;
    background: linear-gradient(360deg, #606060, black);
    color: white;
    font-family: 'Rubik', sans-serif;
    
    
}

.navbar {
    box-shadow: 0 0 5px 2px black;
    background-color: black;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
    height: 45px;
    border-radius: 0 0 10px 10px;
    position: fixed;
    top: 0;
    width: 100%;
    left: 0;
    right: 0;
    box-sizing: border-box;
    padding: 15px 20px;
}

.nav-link {
    display: flex;
    justify-content: space-evenly;
    gap: 10px;
}

.container-img {
    position: relative;
}

.prof-img {
    max-width: 400px;
    border-radius: 40px;
    box-shadow: 2px 2px 10px 10px black;
    transition: transform 0.3s ease;
}

.prof-img:hover {
    transform: scale(1.05);
}

.img {
    width: 100%;
    max-width: 600px;
    height: 350px;
    border-radius:20px;
    box-shadow:0 0 20px 5px black;

}

.skill-img {
    max-width: 80px;
    max-height: 80px;
}

.hero-content {
    margin-top: 50px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 90px;
}

.introduction1 {
    grid-column: span 2;
}

.btn {
    background-color: #FF9142;
    border-radius: 10px;
    padding: 10px;
    transition: background-color 0.3s ease-in;
    transition: color 0.3s ease-in;
}

hr {
    width: 80%;
    border: 1px solid silver;
    border-radius: 20px;
}

.btn:hover {
    background-color: white;
    color: black;
}

.btn2 {
    padding: 10px;
    border-radius: 10px;
    border: 2px solid #FF9142;
    transition: border-color 0.3s ease;
    transition: background-color 0.3s ease;
}

.btn2:hover {
    border-color: white;
    background-color: white;
    color: black;
}


.btn3 {
    padding: 10px;
    border-radius: 10px;
    border: 2px solid #FF9142;
    width: 100px;
    padding: 25px;
    position: absolute;
}

.btn3.one {
    top: -30px;
    left: 500px;
    transition: transform 0.3s ease;
}

.btn3.one:hover {
transform: translateX(-80px);
}

.btn3.two {
    bottom: 90px;
    left: 150px;
    transform: rotate(90deg);
    transition: transform 0.3s ease;
}

.btn3.two:hover {
 transform: rotate(90deg) translateX(-80px);
}

.project {
    
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    row-gap: 100px;
    padding: 50px;

}

.project-introduction {
    grid-column: span 2;
    margin: auto;
}

h1 {
    
    font-size: 5rem;
    text-shadow: 0 0 5px black;
    
}

h2 {
    font-size: 3rem;
    text-shadow: 0 0 2px black;
}

h3 {
    font-size: 2.4rem;
    font-style: italic;
    text-shadow: 0 0 2px black;
}

h4 {
    color: #FF9142;
}

p {
    font-style: italic;
    color: silver;
}

.skills-container h2 {
    font-style: oblique;
}

.skill-grid{
    
    width: 100%;
    max-width: 1000px;
    display: grid;
    gap: 30px;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(1, 1fr);
    justify-content: space-between;
    align-items: center;
    margin: auto;
}

.footer {
    box-shadow: 0 0 30px gray;
    border-radius: 30px;
    padding-top: 20px;
    margin: 0 auto;
    width: 90vw;
    }

.social-media {
    display: flex;
    justify-content: center;
    gap: 10px;
    padding-bottom: 50px;
    
}

.fa-brands {
    font-size: 70px;
}

address {
    height: 50px;
    width: 50%;
    margin: 20px auto;
    color: silver;
}

.contact-address {
    display: flex;
    width: 50%;
    margin: 0 auto;
    justify-content: space-between;
     align-items: flex-start;
}

.contact-address address,
.contact-address div {
  flex: 1;
}

.contact-address a {
    text-decoration: none;
    color: white;
}


.contact-address p {
    margin: 0;
}

.contact-details {
    align-items: center;
    margin: auto;
}

@media (max-width: 768px) {

     .navbar {
    gap: 20px;
    width: 100vw;
    justify-content: space-evenly;
    }


    .hero-content {
    grid-template-columns: 1fr;
    padding: 20px;
    gap: 30px;
    }

    .introduction1 {
        grid-column: span 1;
    }

    .prof-img {
        width: 100%;
        max-width: 350px;
        height: auto;
    }

    .project {
        grid-template-columns: 1fr;
        padding: 20px;
        row-gap: 40px;
    }

    .project-introduction {
        grid-column: span 1;
    }

    .skill-grid{

    grid-template-columns:repeat(2,1fr);

    }

    }

